--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://blist.vercel.app"
+baseurl = "https://cermatedu.github.io/Source/"
 metaDataFormat = "yaml"
 title = "Blist Multilingual Theme"
 theme = "blist"
