--- a/theme.toml
+++ b/theme.toml
@@ -2,12 +2,12 @@ name = "Blist"
 license = "MIT"
 licenselink = "https://github.com/apvarun/blist-hugo-theme/blob/master/LICENSE"
 description = "Blist is a clean and fast blog theme for your Hugo site."
-homepage = "https://cermatedu.github.io/Edu/"
-demosite = "https://cermatedu.github.io/Edu/"
+homepage = "https://cermatedu.github.io/Source/"
+demosite = "https://cermatedu.github.io/Source/"
 tags = ["Hugo", "theme", "blog", "modern", "responsive"]
 features = ["clean", "gallery", "minimal", "minimalist", "mobile", "personal", "responsive", "simple", "tailwind", "blog", "white"]
 min_version = "0.82.1"
 
 [author]
-  name = "Varun A P"
-  homepage = "https://cermatedu.github.io/Edu/"
+  name = "IDev"
+  homepage = "https://cermatedu.github.io/Source/"
