--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://cermatedu.github.io/Source/"
+baseurl = "/Source"
 metaDataFormat = "yaml"
 title = "Blist Multilingual Theme"
 theme = "blist"
@@ -17,7 +17,7 @@ DefaultContentLanguageInSubdir = true
       logo = "/blist-logo.png"
     [[languages.en.menu.main]]
         name = "Blog"
-        url = "blog"
+        url = "https://cermatedu.github.io/Source"
         weight = 1
 
     [[languages.en.menu.main]]
